# tsubomi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  capacity-valid-connections-2026-06-22.md  compose.prod.cache-public.yml  compose.prod.db-public.yml  compose.prod.registry-direct.yml  compose.prod.tls.yml  compose.prod.yml  docker-compose.yml  justfile  paas-db-public-relay-frp.md  paas-db-public-relay-pgbouncer-cb.md  paas-db-public-relay-攻撃テスト.md  paas-egress-design.md  paas-m3-design.md  paas-m4-design.md  paas-m5-design.md  paas-tech-design.md  paas-terminal-design.md
crates/cli/: Cargo.toml
crates/cli/skill/: tsubomi-deploy.md
crates/cli/src/: api.rs  config.rs  main.rs  oauth.rs  platform.rs  skill.rs  version_check.rs
crates/cli/src/commands/: cache.rs  db.rs  deploy.rs  env.rs  health.rs  inject.rs  login.rs  logout.rs  mod.rs  service.rs  skill.rs  trash.rs  uninstall.rs  update.rs  volume.rs  whoami.rs
crates/server/: Cargo.toml
crates/server/scripts/: install.bat  install.ps1  install.sh
crates/server/src/: auth.rs  caches.rs  cli_release.rs  config.rs  crypto.rs  databases.rs  error.rs  gc.rs  ipblock.rs  mail.rs  main.rs  metrics.rs  owners.rs  ratelimit.rs  respond.rs  routes.rs  state.rs  tenant.rs  trash.rs  validate.rs  valkey.rs  volumes.rs
crates/server/src/admin/: actions.rs  audit_view.rs  mod.rs  overview.rs  viewer.rs
crates/server/src/auth/: cookie.rs  extractor.rs  google.rs  middleware.rs  oauth.rs  oauth_state.rs  session.rs  tokens.rs
crates/server/src/mail/templates/: action_code.html  disk_alert.html  owner_remove.html
crates/server/src/routes/: web.rs
crates/server/src/services/: deploy.rs  docker.rs  egress.rs  inject.rs  mod.rs  network.rs  reconcile.rs  registry.rs  route.rs  source.rs  workflow.rs
crates/server/src/volumes/: safe_path.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/sni-gate/: Cargo.toml
crates/sni-gate/src/: main.rs  sni.rs
deploy/cache-gate/: tsubomi-cache-gate.service
deploy/cache-public/: reload-valkey-cert.sh
deploy/sni-gate/: tsubomi-sni-gate.service
doc/: incident-frp-pg-public-2026-06-22.md  paas-cache-public-design.md  paas-db-public-design.md  paas-db-public-relay-結論.md  paas-db-public-relay-調査.md  paas-design-v2.md  paas-dr-restore-runbook.md  paas-egress-design.md  paas-m3-design.md  paas-m5-design.md  paas-registry-direct-design.md  paas-security-backlog.md  paas-service-link-design.md  paas-service-stateful-design.md  paas-service-visibility-design.md  paas-tech-design.md
infra/: docker-compose.yml
infra/pg-tenant-init/: 01-pgbouncer-auth.sh
infra/pgbouncer/: pgbouncer.ini  userlist.txt
migrations/: 20260613000001_auth.sql  20260613000002_resources.sql  20260614000001_volumes.sql  20260615000001_service.sql  20260616000001_ip_allowlist.sql  20260617000001_registry_account.sql  20260618000001_governance.sql  20260618000002_audit_action_index.sql  20260619000001_cache.sql  20260620000001_service_memory_default.sql  20260621000001_viewer_grant.sql  20260622000001_drop_service_public.sql  20260623000001_audit_client_ip.sql  20260623000002_conn_limit_default_100.sql  20260628000001_deploy_commit_message.sql  20260702000001_service_visibility.sql  20260703000001_service_stateful.sql  20260708000001_service_cpu_limit.sql  20260709000001_service_source.sql
scripts/: egress-check.sh  release-cli.sh  release-image.sh  ship-sni-gate.sh  ship.sh
traefik-dynamic/: cloudflare-realip.yml
traefik-plugins/: README.md
web/: index.html  package.json  tsconfig.emails.json  tsconfig.json  vite.config.ts
web/emails/components/: Layout.tsx
web/emails/templates/: ActionCode.tsx  DiskAlert.tsx  OwnerRemove.tsx
web/public/: site.webmanifest
web/scripts/: render-emails.tsx
web/src/: index.css  main.tsx  router.tsx  wterm.d.ts
web/src/components/: claude-session.tsx  dashboard-layout.tsx  install-steps.tsx  page-container.tsx  page-meta.tsx  phase-badge.tsx  query-result.tsx  require-owner.tsx  require-viewer.tsx
web/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  codeblock.tsx  divider.tsx  (+14 more)
web/src/lib/: admin.ts  auth.ts  caches.ts  databases.ts  host-metrics.ts  ipblock.ts  owners.ts  query-client.ts  resources.tsx  services.ts  store.ts  trash.ts  use-copied.ts  volumes.ts
web/src/routes/: About.tsx  AdminAudit.tsx  AdminOverview.tsx  AdminOwners.tsx  AdminRanking.tsx  AdminSettings.tsx  CacheDetail.tsx  Caches.tsx  CliInstall.tsx  DatabaseEditor.tsx  DatabaseLayout.tsx  DatabaseOverview.tsx  DatabaseTables.tsx  Databases.tsx  Forbidden.tsx  Home.tsx  IpAllowlist.tsx  Login.tsx  NoService.tsx  NotFound.tsx  OauthAuthorize.tsx  OauthCodeCallback.tsx  ResourcePage.tsx  ServiceDeploys.tsx  ServiceEnv.tsx  ServiceInjections.tsx  ServiceLayout.tsx  ServiceLogs.tsx  ServiceOverview.tsx  ServiceTerminal.tsx  Services.tsx  Trash.tsx  UiGallery.tsx  VolumeFileBrowser.tsx  VolumeLayout.tsx  VolumeOverview.tsx  Volumes.tsx  Welcome.tsx
(+6 files in other folders)
