[package]
name = "tsubomi-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsubomi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tsubomi-shared = { version = "0.1.0", path = "../shared" }
