[package]
name = "tsubomi-cli"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "tbm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
gethostname = "1.1.0"
hex = "0.4.3"
rand = "0.10.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "logging", "tls12"] }
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
tsubomi-shared = { version = "0.1.0", path = "../shared" }
url = "2.5.8"
webbrowser = "1.2.1"
