[package]
name = "tsubomi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
bcrypt = "0.19.1"
bollard = "0.21.0"
bytes = "1.12.0"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
hex = "0.4.3"
ipnet = "2.12.0"
libc = "0.2.186"
percent-encoding = "2.3.2"
rand = "0.10.1"
redis = { version = "1.2.3", features = ["tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "form"] }
resend-rs = { version = "0.25.1", default-features = false, features = ["rustls-tls"] }
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "migrate", "bigdecimal"] }
tar = "0.4.46"
thiserror = "2.0.18"
tikv-jemallocator = { version = "0.7.0", features = ["unprefixed_malloc_on_supported_platforms"] }
time = "=0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tsubomi-shared = { version = "0.1.0", path = "../shared" }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
