[package]
name = "tsubomi-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["serde"] }
hex = "0.4.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
